2010-03-23  Qi Zhang  <qi.2.zhang@nokia.com>

Reviewed by Simon Hausmann.

        Qt] LayoutTests/fast/canvas/fillrect_gradient.html failed
        https://bugs.webkit.org/show_bug.cgi?id=36444

        Enable LayoutTests/fast/canvas/fillrect_gradient.html

        * platform/qt/Skipped:
        * platform/qt/fast/canvas/fillrect_gradient-expected.checksum: Added.
        * platform/qt/fast/canvas/fillrect_gradient-expected.png: Added.
        * platform/qt/fast/canvas/fillrect_gradient-expected.txt:
2010-03-23  Qi Zhang  <qi.2.zhang@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] LayoutTests/fast/canvas/fillrect_gradient.html failed
        https://bugs.webkit.org/show_bug.cgi?id=36444

        Handle duplicated or unsorted colorStop at platformDestory

        * platform/graphics/qt/GradientQt.cpp:
        (WebCore::Gradient::platformGradient):

Canonical link: https://commits.webkit.org/47692@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56398 268f45cc-cd09-0410-ab3c-d52691b4dbfc